# iplsdk

./: CMakeLists.txt  Dockerfile  LICENSE
.devcontainer/: devcontainer.json
examples/flash_leds/: CMakeLists.txt
examples/flash_leds/.devcontainer/: devcontainer.json
examples/flash_leds/src/: main.c
src/cpu/: CMakeLists.txt  cpu.S  cpu.h
src/crt/: CMakeLists.txt  crt0.S  linker.x
src/display/: CMakeLists.txt  display.c
src/dmacplus/: CMakeLists.txt  dmacplus.c
src/emcddr/: CMakeLists.txt  emcddr.S  emcddr.c  emcddr.h
src/emcsm/: CMakeLists.txt  chip.c  emcsm.c
src/exception/: CMakeLists.txt  ebasehandler.S  ebasehandler.h  exception.S  exception.c  exception.h
src/gpio/: CMakeLists.txt  gpio.c  gpio.h
src/interrupt/: CMakeLists.txt  interrupt.S  interrupt.c  interrupt.h
src/kirk/: CMakeLists.txt  kirk.c  kirk.h
src/lcd/: CMakeLists.txt  phatlcd.c  streetlcd.c  tmdlcd.c
src/lcdc/: CMakeLists.txt  lcdc.c
src/led/: CMakeLists.txt  led.c  led.h
src/lflash/: CMakeLists.txt
src/model/: CMakeLists.txt
src/mspro/: CMakeLists.txt  mspro.c  mspro.h
src/pwm/: CMakeLists.txt
src/spi/: CMakeLists.txt  pl022.c  spi.c  spi.h
src/syscon/: CMakeLists.txt  comms.h  handshake.c  syscon.c  syscon.h
src/sysreg/: CMakeLists.txt  sysreg.c  sysreg.h
src/uart/: CMakeLists.txt  pl011.rs  uart.c
src/utils/: CMakeLists.txt  utils.c  utils.h
