cmake_minimum_required(VERSION 2.8)

project(iplsdk C ASM)

add_subdirectory(src/crt)
add_subdirectory(src/utils)
add_subdirectory(src/sysreg)
add_subdirectory(src/gpio)
add_subdirectory(src/spi)
add_subdirectory(src/uart)
add_subdirectory(src/kirk)
add_subdirectory(src/exception)
add_subdirectory(src/interrupt)
add_subdirectory(src/cpu)
add_subdirectory(src/syscon)